--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: boshwang3699 # Your GitHub organization or username, where this repository lives
+repo: BDC-final # The name of this repository
 
 sites:
   - name: Google
@@ -11,6 +11,17 @@ sites:
     url: https://news.ycombinator.com
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
+  - name: Twitch
+    url: https://www.twitch.tv
+  - name: Youtube
+    url: https://www.youtube.com
+  - name: Facebook
+    url: https://www.facebook.com
+  - name: LeetCode
+    url: https://leetcode.com
+  - name: W3schools
+    url: https://www.w3schools.com
+    
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
